--- a/src/components/header/main/main-header-logo/mainheaderlogo.css
+++ b/src/components/header/main/main-header-logo/mainheaderlogo.css
@@ -71,8 +71,8 @@ h1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 2.4rem;
-    max-width: 68rem;
     margin: 0 auto;
+    padding: 0rem 4.4rem;
   }
 
   .orange-box {
@@ -89,11 +89,13 @@ h1 {
   .main-header-logo-container {
     flex-direction: row;
     padding: 6.4rem 0rem 6.4rem 4.4rem;
-    gap: 9.1rem;
     position: relative;
     overflow: hidden;
-    justify-content: center;
-    align-items: flex-start;
+    align-items: center;
+    background-image: url(/images/image-hero-tablet.png);
+    background-position: right -29rem top -19rem;
+    background-repeat: no-repeat;
+    margin-bottom: 6.4rem;
   }
 
   .title-button-wrapper {
@@ -101,14 +103,11 @@ h1 {
   }
 
   .hero-wrapper {
-    background-image: url(/images/image-hero-tablet.png);
-    height: 100%;
-    margin: unset;
-    background-size: contain;
-    width: 100%;
-    position: absolute;
-    top: -10rem;
-    right: -48rem;
-    align-self: flex-end;
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 90rem) {
+  .main-header-logo-container {
   }
 }
