--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@ html {
 body {
   font-family: "Plus Jakarta Sans";
 }
+
+@media only screen and (min-width: 90rem) {
+  body {
+    max-width: 1440px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+}
