--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -11,6 +11,15 @@
   background: linear-gradient(180deg, #4851ff 0%, #f02aa6 100%);
 }
 
+.footerBtn:hover {
+  background: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.5) 0%,
+      rgba(255, 255, 255, 0.5) 100%
+    ),
+    linear-gradient(180deg, #4851ff -54.32%, #f02aa6 100%);
+}
+
 @media only screen and (min-width: 90rem) {
   .footer-container {
     margin-top: 14.4rem;
