--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -12,6 +12,8 @@
   border: none;
   border-radius: 2.8rem;
   background: #13183f;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .getStartedBtn-text {
@@ -20,6 +22,10 @@
   font-size: 1.8rem;
   font-weight: 700;
   line-height: 150%;
+}
+
+.getStartedBtn:hover {
+  background-color: rgba(102, 108, 163, 1);
 }
 
 @media only screen and (min-width: 48rem) {
