--- a/src/components/main/main-header-logo/mainheaderlogo.css
+++ b/src/components/main/main-header-logo/mainheaderlogo.css
@@ -49,6 +49,7 @@ h1 {
   align-items: center;
   justify-content: center;
   gap: 6rem;
+  padding: 0rem 2rem;
 }
 
 .orange-box {
@@ -64,6 +65,10 @@ h1 {
   font-size: 2.4rem;
   font-weight: 800;
   line-height: 120%;
+}
+
+.orangeBtn:hover {
+  opacity: 0.5;
 }
 
 @media only screen and (min-width: 48rem) {
